--- a/trns.css
+++ b/trns.css
@@ -86,7 +86,7 @@
 }
 
 body {
-    background-image: linear-gradient(270deg, #260D07, green,brown);
+    background-image: linear-gradient(270deg, black, gray);
     background-size: 500% 500% ;
     min-height: 100vh;
     margin: 0;
