fixed the responsive

--- a/trns.css
+++ b/trns.css
@@ -37,7 +37,6 @@
     gap: 30px;
 }
 .card {
-    flex-basis:19% ;
     text-align: center;
     background-color: transparent;
     border-radius: 20px;
@@ -53,6 +52,20 @@
     }
     .title h1 {
         font-size: 40px;
+    }
+    .title p {
+        font-size: 30px;
+        letter-spacing: 0;
+    }
+}
+@media (min-width: 768px) {
+    .card {
+        flex-basis: 40%;
+    }
+}
+@media (min-width: 992px) {
+    .card {
+        flex-basis: 19%;
     }
 }
 .card img {
@@ -86,7 +99,7 @@
 }
 
 body {
-    background-image: linear-gradient(270deg, black, gray);
+    background-image: linear-gradient(270deg, black, gray, black, gray, black, gray, black,  gray);
     background-size: 500% 500% ;
     min-height: 100vh;
     margin: 0;
